--- a/compose.yaml
+++ b/compose.yaml
@@ -8,15 +8,6 @@
 # database or a cache. For examples, see the Awesome Compose repository:
 # https://github.com/docker/awesome-compose
 services:
-  db:
-    build: ./database
-    ports:
-      - 3307:3306
-    environment:
-      MYSQL_ROOT_PASSWORD: ifpi
-      MYSQL_DATABASE: appcsharp
-      MYSQL_USER: root
-      MYSQL_PASSWORD: ifpi
   server:
     build:
       context: .
@@ -24,7 +15,15 @@ services:
     ports:
       - 8080:80
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+  db:
+    build: ./database
+    healthcheck:
+      test: [ "CMD", "mysql", "-e", "SELECT 1" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
